--- a/app/src/main/res/layout/diagnose_audio.xml
+++ b/app/src/main/res/layout/diagnose_audio.xml
@@ -74,6 +74,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
