--- a/app/src/main/res/layout/endreport.xml
+++ b/app/src/main/res/layout/endreport.xml
@@ -133,40 +133,30 @@
         app:layout_constraintStart_toStartOf="@id/EndRiskPercentView"
         android:layout_marginStart="165dp"/>
 
-    <Button
-        android:id="@+id/BanNumberButton"
-        android:layout_width="350dp"
-        android:layout_height="70dp"
-        android:text="신고한 번호 차단하기"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/EndRiskPercentView"
-        android:layout_marginTop="50dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:gravity="left|center_vertical"/>
 
-    <Button
+
+    <ImageButton
         android:id="@+id/WriteinGalleryButton"
         android:layout_width="350dp"
         android:layout_height="70dp"
-        android:text="게시물 작성하기"
-        android:textSize="20dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        android:src="@drawable/gocommunity"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/BanNumberButton"
-        android:layout_marginTop="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/EndRiskPercentView"
+        android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:gravity="left|center_vertical"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/PreventionButton"
         android:layout_width="350dp"
         android:layout_height="70dp"
-        android:text="대처 방법 보러가기"
-        android:textSize="20dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerInside"
+        android:src="@drawable/gochat"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/WriteinGalleryButton"
