--- a/app/src/main/res/layout/writinghistory_listview.xml
+++ b/app/src/main/res/layout/writinghistory_listview.xml
@@ -7,7 +7,7 @@
     <View
         android:id="@+id/mainview"
         android:layout_width="350dp"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,10 +25,10 @@
         android:layout_marginTop="20dp"/>
 
     <TextView
-        android:id="@+id/NickName"
+        android:id="@+id/writer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="닉네임"
+        android:text="작성자"
         android:textSize="20dp"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -37,25 +37,26 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"/>
 
-    <Button
-        android:id="@+id/editbtn"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-        android:text="수정"
-        android:clickable="true"
-        android:textColor="#85B6C6"
-        android:background="#00ff0000"
-        android:textSize="10dp"
-        app:layout_constraintTop_toTopOf="@id/mainview"
-        app:layout_constraintRight_toLeftOf="@id/deletebtn"
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="제목"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:textStyle="italic"
+        app:layout_constraintTop_toBottomOf="@id/profileimg"
+        app:layout_constraintLeft_toLeftOf="@id/mainview"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"/>
+    <ImageButton
+        android:id="@+id/editbtn"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
 
-    <Button
-        android:id="@+id/deletebtn"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
-
-        android:text="삭제"
+        android:scaleType="centerInside"
+        android:src="@drawable/edit"
         android:clickable="true"
         android:textColor="#E76363"
         android:background="#00ff0000"
@@ -65,17 +66,16 @@
         android:layout_marginRight="50dp"
         android:layout_marginTop="20dp"/>
 
-
     <TextView
-        android:id="@+id/story"
+        android:id="@+id/content"
         android:layout_width="300dp"
         android:layout_height="80dp"
-        android:text="개시물 내용"
+        android:text="게시물 내용"
         android:textStyle="normal"
         android:textSize="20dp"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/profileimg"
+        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintLeft_toLeftOf="@id/mainview"
         app:layout_constraintRight_toRightOf="@id/mainview"/>
 
@@ -86,7 +86,7 @@
         app:layout_constrainedWidth="true"
         android:src="@drawable/line"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/story"
+        app:layout_constraintTop_toBottomOf="@id/content"
         app:layout_constraintLeft_toLeftOf="@id/mainview"
         app:layout_constraintRight_toRightOf="@id/mainview"/>
 
