--- a/app/src/main/res/layout/community_writing.xml
+++ b/app/src/main/res/layout/community_writing.xml
@@ -65,11 +65,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constrainedHeight="true"
         android:fillViewport="true"
         android:scrollbars="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/TopView"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
