--- a/app/src/main/res/layout/diagnose_audio.xml
+++ b/app/src/main/res/layout/diagnose_audio.xml
@@ -74,18 +74,22 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/file_name"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
