--- a/app/src/main/res/layout/qna_listview.xml
+++ b/app/src/main/res/layout/qna_listview.xml
@@ -105,7 +105,7 @@
         android:layout_height="match_parent"
         app:layout_constrainedHeight="true"
         app:layout_constrainedWidth="true"
-        android:text=""
+        android:text="답변을 기다리는 중"
         android:textSize="20dp"
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="@id/line"
